LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/IntroHive__Relationship__c.object-meta.xml
<CustomObject>
    <description>Defines a relationship between two objects (ex. User to Contact, Contact to Contact)</description>
    <label>Relationship</label>
    <nameField>
        <displayFormat>IH-{000000000}</displayFormat>
        <label>Relationship Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>