LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__Communication_Methods__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Communication_Methods__c</fullName>
    <description>The methods of communication used in this relationship</description>
    <label>Communication Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>