LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__Contact_To__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Contact_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the contact (target) of the relationship</description>
    <label>Contact To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>