LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__Correspondence_Date__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Correspondence_Date__c</fullName>
    <description>Date of the most recent correspondence recognized by Introhive</description>
    <label>Recent Correspondence</label>
    <type>Date</type>
</CustomField>