LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__Notes__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Notes__c</fullName>
    <description>Additional notes about this relationship</description>
    <label>Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>