LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__Relationship_Strength__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Relationship_Strength__c</fullName>
    <description>Textual representation of the Introhive relationship strength score</description>
    <formula>IF (IntroHive__Strength__c &gt;= 90, &apos;Very High&apos;,
  IF (IntroHive__Strength__c &gt;= 75, &apos;High&apos;,
    IF (IntroHive__Strength__c &gt;= 50, &apos;Medium-High&apos;,
      IF (IntroHive__Strength__c &gt;= 25, &apos;Medium&apos;,
        IF (IntroHive__Strength__c &gt;= 10, &apos;Medium-Low&apos;, &apos;Low&apos;)
      )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relationship Strength</label>
    <type>Text</type>
</CustomField>