LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__Strength__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Strength__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The raw relationship strength between the two parties</description>
    <label>Strength</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>