LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__Type__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__Type__c</fullName>
    <description>The type of the relationship between the two parties</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Known By</fullName>
                <default>true</default>
                <label>Known By</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>