LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__User_Contact_From__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__User_Contact_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the user contact (source) of the relationship.These are essentially contact records for corresponding users</description>
    <label>User Contact From</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationships (Contact From)</relationshipLabel>
    <relationshipName>Relationships1</relationshipName>
    <type>Lookup</type>
</CustomField>