LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/fields/IntroHive__User_From__c.field-meta.xml
<CustomField>
    <fullName>IntroHive__User_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Defines the user (source) of the relationship</description>
    <label>User From</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Relationships</relationshipName>
    <type>Lookup</type>
</CustomField>