LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/validationRules/IntroHive__Only_Contact_Or_Lead_Not_Both.validationRule-meta.xml
<ValidationRule>
    <fullName>IntroHive__Only_Contact_Or_Lead_Not_Both</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISBLANK(IntroHive__Contact_To__c)  ||
ISBLANK(IntroHive__Lead_To__c))</errorConditionFormula>
    <errorMessage>Either Contact_To or Lead_To should set, but not both</errorMessage>
</ValidationRule>