LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/validationRules/IntroHive__Only_User_Or_Contact_Not_Both.validationRule-meta.xml
<ValidationRule>
    <fullName>IntroHive__Only_User_Or_Contact_Not_Both</fullName>
    <active>true</active>
    <errorConditionFormula>NOT (ISBLANK(IntroHive__User_Contact_From__c)  ||
ISBLANK(IntroHive__User_From__c))</errorConditionFormula>
    <errorMessage>Either User_From or Contact_From should set, but not both</errorMessage>
</ValidationRule>