LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/validationRules/IntroHive__Source_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>IntroHive__Source_Not_Blank</fullName>
    <active>true</active>
    <description>Source Not Blank</description>
    <errorConditionFormula>isblank( IntroHive__User_From__c ) &amp;&amp;
isblank( IntroHive__User_Contact_From__c )</errorConditionFormula>
    <errorMessage>Please select a User to have this relationship from.</errorMessage>
</ValidationRule>