LinKreta_POC_Repository/force-app/main/default/objects/IntroHive__Relationship__c/validationRules/IntroHive__Target_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>IntroHive__Target_Not_Blank</fullName>
    <active>true</active>
    <description>Target Not Blank</description>
    <errorConditionFormula>isblank( IntroHive__Contact_To__c ) &amp;&amp;
isblank( IntroHive__Lead_To__c )</errorConditionFormula>
    <errorMessage>Please select a Contact, Lead to have the relationship with</errorMessage>
</ValidationRule>